added aql queries